Java downgrade from 17 to 11 (#10)